<resources>
    <string name="app_name">Apni Care</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="pres_desc1">A valid prescription should contain doctor, patient, medicine details and the doctor’s signature.</string>
    <string name="pres_title1">What is a valid prescription?</string>
    <string name="presc_desc2">Doctor’s name, the practicing hopital, registered number
should be present on the prescription</string>
    <string name="presc_title2">Doctor’s name and details</string>
    <string name="presc_desc3">Patient details such as patient’s name, age, date of
consultation should be present on the prescription</string>
    <string name="presc_title3">Patients details</string>
    <string name="presc_desc4">Medicine details such as  medicine name, strength, duration
should be mentioned on the prescription</string>
    <string name="presc_title4">Medicine’s name and dosage</string>
    <string name="presc_desc5">Signature and/or stamp of the doctor is necessary for the
prescription to be valid</string>
    <string name="presc_title5">Doctor’s signature and stamp</string>
    <string name="title_activity_main2">MainActivity2</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="hello_blank_fragment">fragment</string>
    <string name="ordericon">Order Now</string>
    <string name="orderbyprescription">Order with prescription</string>
    <string name="orderprescription">Upload the prescription and tell us what you need. We do the rest.</string>
    <string name="username">USER</string>
    <string name="cart">cart</string>

    //Headings
    <string name="heading_one">Quick &amp; easy ordering process</string>
    <string name="heading_two">Instant support &amp; replay</string>
    <string name="heading_three">Easy &amp; multi solutions payment</string>
    <string name="heading_fourth">Order from nearest, and get it fastest</string>

    //Description
    <string name="desc_one">Now you could order your medicine from nearest pharmacy from you that provide all your needs</string>
    <string name="desc_two">Pharmacy will receive your orders and able to replay to you once you place an order and ask for help</string>
    <string name="desc_three">You can pay on cash or online using your common methods</string>
    <string name="desc_fourth">Search provide all nearest pharmacies that are near you, and your order will be to you in seconds</string>
    <string name="conti">Continue</string>
    <string name="skip">Skip</string>
    <string name="introimg">introscreenimage</string>

    //medical prescription
    <string name="Howwouldyouliketoproceed"> How would you like to proceed ?</string>
    <string name="OrderEverythingasperprescription">Order Everything as per prescription</string>
    <string name="Callforthedetails">Call for the details</string>
    <string name="AttachedPrescription">Attached Prescription</string>
    <string name="Placerequest">Place request</string>
    <string name="deliveringto">Delivering to </string>
    <string name="address">123/78 ambaan nagar, muzaffarnagar</string>

    //homepage
    <string name="popular_categories">Categories</string>
    <string name="Vitaminsandsupplements">Vitamins and supplements</string>
    <string name="Healthcaredevices">Healthcare devices</string>
    <string name="ayurveda">Ayurveda</string>
    <string name="order">Order</string>
    <string name="lab_test">Lab Test</string>
    <string name="medicine">Medicine</string>
    <string name="doctor">Doctor</string>
    <string name="Painreleif">Pain releif</string>
    <string name="Sexualwellness">Sexual wellness</string>
    <string name="skincare">Skin care</string>
    <string name="Homeopathy">Homeopathy</string>
    <string name="health_care">Health care</string>
    <string name="Nutritionaldrinks">Nutritional drinks</string>
    <string name="products">Products</string>
    <string name="prefix">₹</string>
    <string name="invalidName">Invalid Name</string>
    <string name="invalidEmail">Enter proper Email Address</string>
    <string name="invalidNumber">Invalid Number</string>
    <string name="invalidDOb">Invalid DOB</string>

</resources>